--- a/styles/main-mobile.css
+++ b/styles/main-mobile.css
@@ -31,7 +31,10 @@ html {
 
 body {
     background-color: var(--a);
+    font-family: var(--poppins);
 }
+
+/* NAVBAR */
 
 .navbar {
     display: flex;
@@ -76,7 +79,6 @@ body {
 .navbar-left ul li a,
 .navbar-right li a {
     color: var(--white-text);
-    font-family: var(--poppins);
     font-size: var(--md);
     letter-spacing: 1px;
     line-height: 2;
@@ -84,9 +86,64 @@ body {
     text-transform: uppercase;
 }
 
+/* NAVBAR COMPLETE */
+
+/* TITLE */
+
+.container-header {
+    position: absolute;
+    width: 100%;
+    background-color: green;
+    padding: 20px;
+    left: 30px;
+    top: 25%;
+}
+
+.container-header .small-title {
+    color: var(--yellow);
+    font-size: var(--md);
+    text-transform: uppercase;
+    line-height: 2;
+    letter-spacing: 2.8px;
+    font-weight: 600;
+}
+
+.container-header .title {
+    margin-top: 24px;
+    margin-bottom: 60px;
+    color: var(--white-text);
+    font-size: 4rem;
+    font-weight: 600;
+    line-height: 110%;
+}
+
+.container-header .title .line {
+    width: 40px;
+    margin: 20px 0 0;
+    height: 1px;
+    background: var(--yellow);
+    display: block;
+}
+
+.container-header .subtitle {
+    width: 90%;
+    color: var(--white-text);
+    font-size: var(--md);
+    font-weight: 300;
+    line-height: 1.3;
+}
+
+.container-header .subtitle a {
+    color: var(--yellow);
+}
 
 
-@media (min-width: 640px) {
+/* TITLE COMPLETE */
+
+
+@media (min-width: 800px) {
+
+    /* NAVBAR */
     .navbar-right .navbar-right-ul {
         display: flex;
         margin-right: 12px;
@@ -96,6 +153,31 @@ body {
         width: 75px;
         height: 35px;
     }
+
+    /* NAVBAR COMPLETE */
+
+    /* TITLE */
+
+    .container-header {
+        top: 10%;
+        ;
+        padding: 52px 80px 52px 52px;
+    }
+
+    .container-header .title {
+        font-size: 9rem;
+        line-height: 1.1em;
+        margin-bottom: 100px;
+    }
+
+    .container-header .subtitle {
+        letter-spacing: 1px;
+        line-height: 1.6em;
+        width: 50%;
+    }
+
+
+    /* TITLE COMPLETE */
 }
 
 
