--- a/styles/main-mobile.css
+++ b/styles/main-mobile.css
@@ -30,19 +30,54 @@ html {
 }
 
 body {
-    background-color: var(--a);
     font-family: var(--poppins);
 }
 
-/* NAVBAR */
+/* BG VIDEO */
+#header {
+    height: 700px;
+}
 
-.navbar {
+#header .header-video {
+    height: 700px;
+    left: 0;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
+#header .header-video video {
+    min-height: 100%;
+    min-width: 100%;
+}
+
+#header .header-overlay {
+    background: linear-gradient(#000 0%, #000 60%, #000);
+    height: 700px;
+    left: 0;
+    opacity: .50;
+    position: absolute;
+    top: 0;
+    width: 100vw;
+    z-index: 1;
+}
+
+#header .header-content {
+    position: relative;
+    z-index: 2;
+}
+/* BG VIDEO COMPLETE */
+
+
+/* NAVBAR */
+#header .header-content .navbar {
     display: flex;
     justify-content: space-between;
     padding: 0 16px;
 }
 
-.navbar-left .logo {
+.navbar-left .navbar-left-ul .logo {
     height: auto;
     width: 48px;
 }
@@ -60,12 +95,12 @@ body {
     display: flex;
 }
 
-.navbar-right .container-menu {
+.navbar-right .navbar-menu .container-menu {
     display: flex;
+    /* falta  margin */
 }
 
-
-.navbar-right .container-menu .menu {
+.navbar-right .navbar-menu .container-menu .menu {
     width: 16px;
 }
 
@@ -76,7 +111,7 @@ body {
     height: 110px;
 }
 
-.navbar-left ul li a,
+.navbar-left li a,
 .navbar-right li a {
     color: var(--white-text);
     font-size: var(--md);
@@ -85,109 +120,94 @@ body {
     padding: 16px;
     text-transform: uppercase;
 }
-
 /* NAVBAR COMPLETE */
 
 /* TITLE */
-
-.container-header {
-    position: absolute;
-    width: 100%;
-    background-color: green;
-    padding: 20px;
+.header-content .container-header {
     left: 30px;
-    top: 25%;
+    padding: 20px;
+    position: absolute;
+    top: 200px;
+    ;
+    width: 100%;
 }
 
-.container-header .small-title {
+.header-content .container-header .small-title {
     color: var(--yellow);
     font-size: var(--md);
-    text-transform: uppercase;
-    line-height: 2;
-    letter-spacing: 2.8px;
     font-weight: 600;
+    letter-spacing: 2.8px;
+    line-height: 2;
+    text-transform: uppercase;
 }
 
-.container-header .title {
-    margin-top: 24px;
-    margin-bottom: 60px;
+.header-content .container-header .title {
     color: var(--white-text);
     font-size: 4rem;
     font-weight: 600;
     line-height: 110%;
+    margin-bottom: 60px;
+    margin-top: 24px;
 }
 
-.container-header .title .line {
-    width: 40px;
-    margin: 20px 0 0;
-    height: 1px;
+.header-content .container-header .title .line {
     background: var(--yellow);
     display: block;
+    height: 1px;
+    margin: 20px 0 0;
+    width: 40px;
 }
 
-.container-header .subtitle {
-    width: 90%;
+.header-content .container-header .subtitle {
     color: var(--white-text);
     font-size: var(--md);
     font-weight: 300;
     line-height: 1.3;
+    max-width: 424px;
+    min-width: 300px;
+    width: 90%;
 }
 
-.container-header .subtitle a {
+.header-content .container-header .subtitle a {
     color: var(--yellow);
 }
-
-
 /* TITLE COMPLETE */
 
 
 @media (min-width: 800px) {
 
     /* NAVBAR */
+    .navbar-left .navbar-left-ul .logo {
+        height: 35px;
+        width: 75px;
+    }
+
     .navbar-right .navbar-right-ul {
         display: flex;
         margin-right: 12px;
     }
-
-    .navbar-left .logo {
-        width: 75px;
-        height: 35px;
-    }
-
     /* NAVBAR COMPLETE */
 
     /* TITLE */
-
-    .container-header {
-        top: 10%;
-        ;
+    .header-content .container-header {
         padding: 52px 80px 52px 52px;
+        top: 68px;
+        
     }
 
-    .container-header .title {
+    .header-content .container-header .title {
         font-size: 9rem;
         line-height: 1.1em;
         margin-bottom: 100px;
     }
 
-    .container-header .subtitle {
+    .header-content .container-header .subtitle {
         letter-spacing: 1px;
         line-height: 1.6em;
+        max-width: 731px;
+        min-width: 430px;
         width: 50%;
     }
-
-
     /* TITLE COMPLETE */
+
 }
-
-
-/* FULLSCREEN VIDEO 
-
-width: 100%;
-height: 100%;
-display: block;
-object-fit: cover;
-position: absolute;
-left: 0;
-top: 0;
-*/
