third section and footer(1/3) complete

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -70,4 +70,16 @@
     }
 
     /* MAIN-SECOND SECTION:COMPLETE */
+
+    /* MAIN-THIRD SECTION */
+
+    #main .main-services-container {
+        min-width: 400px;
+    }
+
+    /* MAIN-THIRD SECTION:COMPLETE */
+
+    /* FOOTER */
+
+    /* FOOTER:COMPLETE */
 }
