--- a/styles/main-mobile.css
+++ b/styles/main-mobile.css
@@ -59,7 +59,7 @@ body {
     opacity: .50;
     position: absolute;
     top: 0;
-    width: 100vw;
+    width: 100%;
     z-index: 1;
 }
 
@@ -130,7 +130,6 @@ body {
     padding: 20px;
     position: absolute;
     top: 200px;
-    width: 100%;
 }
 
 .small-title {
@@ -177,21 +176,22 @@ body {
 /* TITLE:COMPLETE */
 
 /* MAIN - FIRST SECTION */
-
 #main {
     width: 100%;
     height: auto;
 }
 
 #main .main-container {
-    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 90%;
-    height: 680px;
+    height: auto;
     padding: 160px 0 80px;
     text-align: center;
+}
+
+#main .first-container {
+    height: 680px;
 }
 
 .medium-title {
@@ -219,8 +219,6 @@ body {
 
 
 /* MAIN - SECOND SECTION */
-
-
 #main .main-second-container {
     height: 754px;
 }
@@ -228,7 +226,7 @@ body {
 #main .main-second-container .bg-img {
     width: 100%;
     height: 100%;
-    background-image: url(../assets/icons/second-section.jpg);
+    background-image: url(../assets/img/second-section.jpg);
     background-size: cover;
     background-position: 50% 50%;
 }
@@ -271,3 +269,68 @@ body {
 
 /* MAIN-SECOND SECTION:COMPLETE */
 
+/* MAIN THIRD SECTION */
+#main .main-services {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 40px;
+}
+
+#main .main-services .main-services-container {
+    padding: 80px 100px;
+
+    min-width: 350px;
+    max-width: 30%;
+    margin: 0 auto;
+}
+
+#main .main-services .main-services-container div {
+    display: flex;
+    justify-content: center;
+}
+
+#main .main-services .main-services-container div img {
+    height: 36px;
+    width: 36px;
+    margin-bottom: 36px;
+    margin-top: 0;
+}
+
+#main .main-services .main-services-container h3 {
+    margin-bottom: 30px;
+    font-size: 2rem;
+    font-weight: 600;
+    color: var(--gray-text);
+}
+
+#main .main-services .main-services-container p {
+    font-size: var(--md);
+    color: var(--paragraph);
+}
+
+/* MAIN THIRD SECTION:COMPLETE */
+
+/* FOOTER */
+#footer .footer-third-container {
+    width: 100%;
+    height: 300px;
+    background-color: #222;
+}
+
+#footer .footer-third-container div {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    text-align: center;
+}
+
+#footer .footer-third-container div h3 {
+    font-size: var(--md);
+    color: #666;
+    font-weight: 400;
+    letter-spacing: 4px;
+    margin: 0 auto;
+}
+
+
+/* FOOTER:COMPLETE */
