--- a/styles/main-mobile.css
+++ b/styles/main-mobile.css
@@ -98,11 +98,11 @@ body {
 
 .navbar-right .navbar-menu .container-menu {
     display: flex;
-    /* falta  margin */
 }
 
 .navbar-right .navbar-menu .container-menu .menu {
     width: 16px;
+    margin-right: 5px;
 }
 
 .navbar-left ul,
@@ -226,7 +226,7 @@ body {
 #main .main-second-container .bg-img {
     width: 100%;
     height: 100%;
-    background-image: url(../assets/img/second-section.jpg);
+    background-image: url(../assets/img/second-section.webp);
     background-size: cover;
     background-position: 50% 50%;
 }
@@ -260,11 +260,19 @@ body {
 .main-second-container .bg-img .right-container .btn {
     /* REPEAT? */
     color: #333;
-    background: #edb713;
+    background: var(--yellow);
     border: 2px solid #edb713;
     padding: 10px 18px;
     margin-top: 40px;
     letter-spacing: 1px;
+    cursor: pointer;
+    border-radius: 4px;
+    
+}
+
+.main-second-container .bg-img .right-container .btn:hover {
+    border: 2px solid var(--white-text);
+    color: var(--white-text);
 }
 
 /* MAIN-SECOND SECTION:COMPLETE */
